BS-13674 unable to apply a layout when page has a long DisplayName (update css to avoid field overflow )

--- a/looknfeel/src/main/less/skin/bootstrap/portal/applications/app-details.less
+++ b/looknfeel/src/main/less/skin/bootstrap/portal/applications/app-details.less
@@ -1,5 +1,3 @@
-.dl-horizontal dt {width: 30%}
-.dl-horizontal dd {margin-left: 35%}
 
 #look-n-feel-edit-section .editable-buttons> button{
   margin-top: 2px;
@@ -9,7 +7,7 @@
 }
 
 #look-n-feel-edit-section .editable-input{
-  max-width: 350px;
+  max-width: 280px;
 }
 #app-details-container .actions{
 	padding-top: 20px;
